Trying Travis' recommended x display service

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ matrix:
     - os: linux
       sudo: required
       dist: xenial
+      services: xvfb
       addons:
         apt:
           update: true
