--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,7 @@ script:
   # cd to a next level directory because of the relative path in /src/CinScopeTest.cpp
   #- cd $TRAVIS_BUILD_DIR/src 
   # find the test executable, run it, and quit so it's not run more than once
-  - find $TRAVIS_BUILD_DIR -name "cinema_scope_test" -exec {} \; -quit
+  - find ../ -name "cinema_scope_test" -print0 -quit | xargs -0 bash -c
 
 # OPTIONAL - Cleaning up the cache
 #before_cache:
