--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,6 @@ matrix:
     - os: linux
       sudo: required
       dist: xenial
-      services: xvfb
       addons:
         apt:
           update: true
@@ -44,28 +43,29 @@ matrix:
           packages:
             - libgl1-mesa-dev
             - qt511base
-#    - os: osx
-#      services: xvfb
-#      addons:
-#        brew:
-#          update: true
-#          packages:
-#            - qt5
-#      # Brew doesn't automatically set qt5 bins to PATH anymore
-#      env: PATH="${PATH}:/usr/local/opt/qt/bin"    
-#    - os: osx
-#      services: xvfb
-#      osx_image: xcode10
-#      addons:
-#        brew:
-#          update: true
-#          packages:
-#            - qt5
-#      # Brew doesn't automatically set qt5 bins to PATH anymore
-#      env:
-#        - PATH="${PATH}:/usr/local/opt/qt/bin"
-#        - osx_image="xcode10"
-#    - os: windows
+    - os: osx
+      addons:
+        brew:
+          update: true
+          packages:
+            - qt5
+      # Brew doesn't automatically set qt5 bins to PATH anymore
+      env: PATH="${PATH}:/usr/local/opt/qt/bin"    
+    - os: osx
+      osx_image: xcode10
+      addons:
+        brew:
+          update: true
+          packages:
+            - qt5
+      # Brew doesn't automatically set qt5 bins to PATH anymore
+      env:
+        - PATH="${PATH}:/usr/local/opt/qt/bin"
+        - osx_image="xcode10"
+    - os: windows
+
+# Start xvfb to get be able to run GUI tests
+services: xvfb
 
 # OPTIONAL - which components to cache 
 #cache components:
