--- a/.travis.yml
+++ b/.travis.yml
@@ -88,10 +88,7 @@ install:
 # non-zero exit status: build status returns failed, but continues to run. Intended for the after_failure step
 script:
   - . $TRAVIS_BUILD_DIR/travis/travis_script.sh
-  # cd to a next level directory because of the relative path in /src/CinScopeTest.cpp
-  - cd $TRAVIS_BUILD_DIR/src 
-  # find the test executable, run it, and quit so it's not run more than once. xargs is used to get the exit code of the tests
-  - find ../ -name "cinema_scope_test" -print0 -quit | xargs -0 bash -c
+  - . $TRAVIS_BUILD_DIR/travis/travis_test.sh
 
 # OPTIONAL - Cleaning up the cache
 #before_cache:
