--- a/.travis.yml
+++ b/.travis.yml
@@ -104,19 +104,14 @@ script:
 #before_deploy:
 #  - cd $TRAVIS_BUILD_DIR
 #  - doxygen ./doxyfile.cfg
-#  - 
+#  - git commit -am "Updating doxygen" 
 
 # OPTIONAL - Deployment
 # non-zero exit status: build status returns failed but continues running
 # This deploys a zip and a tarball to Github Releases if it is a tagged push request
 #deploy:
 #  provider: pages
-#  file:
-#    - "${TRAVIS_TAG}.zip"
-#    - "${TRAVIS_TAG}.tar.gz"
 #  skip_cleanup: true
-#  on:
-#    tags: true
 
 # OPTIONAL - Steps after deployement. Runs for each deployement if there are multiple deployements
 # non-zero exit status: build status returns failed but continues running
