--- a/.travis.yml
+++ b/.travis.yml
@@ -89,6 +89,8 @@ install:
 # non-zero exit status: build status returns failed, but continues to run. Intended for the after_failure step
 script:
   - . $TRAVIS_BUILD_DIR/travis/travis_script.sh
+  - cd $TRAVIS_BUILD_DIR/src
+  - $(find . -name "cinema_scope_test")
   - . $TRAVIS_BUILD_DIR/travis/travis_test.sh 
 
 # OPTIONAL - Cleaning up the cache
