--- a/.travis.yml
+++ b/.travis.yml
@@ -32,27 +32,27 @@ git:
 # Matrix of operating systems and dependencies
 matrix:
   include:
-    - os: linux
-      sudo: required
-      # Start xvfb to get be able to run GUI tests
-      services: xvfb
-      dist: xenial
-      addons:
-        apt:
-          update: true
-          sources:
-            - sourceline: ppa:beineri/opt-qt-5.11.1-xenial
-          packages:
-            - libgl1-mesa-dev
-            - qt511base
-    - os: osx
-      addons:
-        brew:
-          update: true
-          packages:
-            - qt5
-      # Brew doesn't automatically set qt5 bins to PATH anymore
-      env: PATH="${PATH}:/usr/local/opt/qt/bin"    
+#    - os: linux
+#      sudo: required
+#      # Start xvfb to get be able to run GUI tests
+#      services: xvfb
+#      dist: xenial
+#      addons:
+#        apt:
+#          update: true
+#          sources:
+#            - sourceline: ppa:beineri/opt-qt-5.11.1-xenial
+#          packages:
+#            - libgl1-mesa-dev
+#            - qt511base
+#    - os: osx
+#      addons:
+#        brew:
+#          update: true
+#          packages:
+#            - qt5
+#      # Brew doesn't automatically set qt5 bins to PATH anymore
+#      env: PATH="${PATH}:/usr/local/opt/qt/bin"    
     - os: osx
       osx_image: xcode10
       addons:
@@ -64,9 +64,9 @@ matrix:
       env:
         - PATH="${PATH}:/usr/local/opt/qt/bin"
         - osx_image="xcode10"
-    - os: windows
-      # Start xvfb to get be able to run GUI tests
-      services: xvfb
+#    - os: windows
+#      # Start xvfb to get be able to run GUI tests
+#      services: xvfb
 
 # OPTIONAL - which components to cache 
 #cache components:
@@ -89,7 +89,7 @@ install:
 # non-zero exit status: build status returns failed, but continues to run. Intended for the after_failure step
 script:
   - . $TRAVIS_BUILD_DIR/travis/travis_script.sh
-  - . $TRAVIS_BUILD_DIR/travis/travis_test.sh 
+  - bash $TRAVIS_BUILD_DIR/travis/travis_test.sh 
 
 # OPTIONAL - Cleaning up the cache
 #before_cache:
