--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ language: cpp
 #  - master
 #  - /v[0-9].*$/
 
-#stages:
-#  name:
-#    - before_deploy
-#    - deploy
-#    if: osx_image != "xcode10"
+stages:
+  - name: before_deploy
+    if: osx_image != "xcode10"
+  - name: deploy
+    if: osx_image != "xcode10"
 
 # Notification settings
 notifications:
