--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ language: cpp
 
 stages:
   - name: before_deploy
-    if: osx_image != "xcode10"
+    if: os = osx AND osx_image != "xcode10"
   - name: deploy
-    if: osx_image != "xcode10"
+    if: os = osx AND osx_image != "xcode10"
 
 # Notification settings
 notifications:
@@ -109,6 +109,7 @@ before_deploy:
 # This deploys a zip and a tarball to Github Releases if it is a tagged push request
 deploy:
   provider: pages
+  all_branches: true
   github-token: ${GITHUB_TOKEN}
   skip_cleanup: true
 
