Bring back set -e and add sleep after failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -92,7 +92,8 @@ script:
 # non-zero exit status: build status returns failed but continues running
 after_success:
   - test $TRAVIS_BRANCH = "master" && bash $TRAVIS_BUILD_DIR/travis/travis_deploy.sh || exit 0
-#after_failure:
+after_failure:
+  - sleep 1 && echo "Failure somewhere"
 
 # OPTIONAL - Steps before deployement. Runs for each deployement if there are multiple deployements
 # non-zero exit status: build status returns failed but continues running
